test/forRange4.slq


def main(){
	x:=[];
	for i in 1..0..-2{
		x~=[i:!ℕ];
	}		
	for i in -1..0..2{
		x~=[i:!ℕ]; /// error
	}
}
